--- a/deploy/requirements.txt
+++ b/deploy/requirements.txt
@@ -57,3 +57,4 @@ redis>=3.5.0
 sentry-sdk>=1.1.0
 label-studio-converter==0.0.37
 launchdarkly-server-sdk==7.3.0
+opencv-contrib-python-headless==4.5.5.62
