--- a/label_studio/frontend/package.json
+++ b/label_studio/frontend/package.json
@@ -153,6 +153,7 @@
     "browserContext": "default"
   },
   "dependencies": {
-    "lodash.clonedeep": "^4.5.0"
+    "lodash.clonedeep": "^4.5.0",
+    "react-select": "^5.2.1"
   }
 }
